src/skiacapi/cpp/skiacapi.h

// const.cpp

CAPI unsigned char SkColorType_RGBA_F32(void);
CAPI unsigned char SkColorType_A16_unorm(void);
CAPI unsigned char SkAlphaType_Opaque(void);
CAPI unsigned char SkAlphaType_Premul(void);
CAPI unsigned char SkAlphaType_Unpremul(void);
CAPI unsigned char SkTileMode_Clamp(void);
CAPI unsigned char SkTileMode_Decal(void);