src/main/java/com/loadingbyte/cinecred/natives/skiacapi/skiacapi_h.java

// Generated by jextract

package com.loadingbyte.cinecred.natives.skiacapi;

import java.lang.invoke.*;
import java.lang.foreign.*;
import java.nio.ByteOrder;
import java.util.*;
import java.util.function.*;
import java.util.stream.*;

import static java.lang.foreign.ValueLayout.*;
import static java.lang.foreign.MemoryLayout.PathElement.*;

public class skiacapi_h extends skiacapi_h$shared {

    skiacapi_h() {
        // Should not be called directly
    }

    static final Arena LIBRARY_ARENA = Arena.ofAuto();

    static final SymbolLookup SYMBOL_LOOKUP = SymbolLookup.loaderLookup()
            .or(Linker.nativeLinker().defaultLookup());

    private static final int true_ = (int)1L;
    /**
     * {@snippet lang=c :
     * #define true 1
     * }
     */
    public static int true_() {
        return true_;
    }
    private static final int false_ = (int)0L;
    /**
     * {@snippet lang=c :
     * #define false 0
     * }
     */
    public static int false_() {
        return false_;
    }
    private static final int __bool_true_false_are_defined = (int)1L;
    /**
     * {@snippet lang=c :
     * #define __bool_true_false_are_defined 1
     * }
     */
    public static int __bool_true_false_are_defined() {
        return __bool_true_false_are_defined;
    }

    private static class SkColorType_RGBA_F32 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkColorType_RGBA_F32");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkColorType_RGBA_F32()
     * }
     */
    public static FunctionDescriptor SkColorType_RGBA_F32$descriptor() {
        return SkColorType_RGBA_F32.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkColorType_RGBA_F32()
     * }
     */
    public static MethodHandle SkColorType_RGBA_F32$handle() {
        return SkColorType_RGBA_F32.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkColorType_RGBA_F32()
     * }
     */
    public static MemorySegment SkColorType_RGBA_F32$address() {
        return SkColorType_RGBA_F32.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkColorType_RGBA_F32()
     * }
     */
    public static byte SkColorType_RGBA_F32() {
        var mh$ = SkColorType_RGBA_F32.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkColorType_RGBA_F32");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkColorType_A16_unorm {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkColorType_A16_unorm");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkColorType_A16_unorm()
     * }
     */
    public static FunctionDescriptor SkColorType_A16_unorm$descriptor() {
        return SkColorType_A16_unorm.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkColorType_A16_unorm()
     * }
     */
    public static MethodHandle SkColorType_A16_unorm$handle() {
        return SkColorType_A16_unorm.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkColorType_A16_unorm()
     * }
     */
    public static MemorySegment SkColorType_A16_unorm$address() {
        return SkColorType_A16_unorm.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkColorType_A16_unorm()
     * }
     */
    public static byte SkColorType_A16_unorm() {
        var mh$ = SkColorType_A16_unorm.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkColorType_A16_unorm");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkAlphaType_Opaque {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkAlphaType_Opaque");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkAlphaType_Opaque()
     * }
     */
    public static FunctionDescriptor SkAlphaType_Opaque$descriptor() {
        return SkAlphaType_Opaque.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkAlphaType_Opaque()
     * }
     */
    public static MethodHandle SkAlphaType_Opaque$handle() {
        return SkAlphaType_Opaque.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkAlphaType_Opaque()
     * }
     */
    public static MemorySegment SkAlphaType_Opaque$address() {
        return SkAlphaType_Opaque.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkAlphaType_Opaque()
     * }
     */
    public static byte SkAlphaType_Opaque() {
        var mh$ = SkAlphaType_Opaque.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkAlphaType_Opaque");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkAlphaType_Premul {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkAlphaType_Premul");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkAlphaType_Premul()
     * }
     */
    public static FunctionDescriptor SkAlphaType_Premul$descriptor() {
        return SkAlphaType_Premul.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkAlphaType_Premul()
     * }
     */
    public static MethodHandle SkAlphaType_Premul$handle() {
        return SkAlphaType_Premul.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkAlphaType_Premul()
     * }
     */
    public static MemorySegment SkAlphaType_Premul$address() {
        return SkAlphaType_Premul.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkAlphaType_Premul()
     * }
     */
    public static byte SkAlphaType_Premul() {
        var mh$ = SkAlphaType_Premul.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkAlphaType_Premul");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkAlphaType_Unpremul {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkAlphaType_Unpremul");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkAlphaType_Unpremul()
     * }
     */
    public static FunctionDescriptor SkAlphaType_Unpremul$descriptor() {
        return SkAlphaType_Unpremul.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkAlphaType_Unpremul()
     * }
     */
    public static MethodHandle SkAlphaType_Unpremul$handle() {
        return SkAlphaType_Unpremul.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkAlphaType_Unpremul()
     * }
     */
    public static MemorySegment SkAlphaType_Unpremul$address() {
        return SkAlphaType_Unpremul.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkAlphaType_Unpremul()
     * }
     */
    public static byte SkAlphaType_Unpremul() {
        var mh$ = SkAlphaType_Unpremul.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkAlphaType_Unpremul");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkTileMode_Clamp {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkTileMode_Clamp");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkTileMode_Clamp()
     * }
     */
    public static FunctionDescriptor SkTileMode_Clamp$descriptor() {
        return SkTileMode_Clamp.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkTileMode_Clamp()
     * }
     */
    public static MethodHandle SkTileMode_Clamp$handle() {
        return SkTileMode_Clamp.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkTileMode_Clamp()
     * }
     */
    public static MemorySegment SkTileMode_Clamp$address() {
        return SkTileMode_Clamp.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkTileMode_Clamp()
     * }
     */
    public static byte SkTileMode_Clamp() {
        var mh$ = SkTileMode_Clamp.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkTileMode_Clamp");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkTileMode_Decal {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkTileMode_Decal");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkTileMode_Decal()
     * }
     */
    public static FunctionDescriptor SkTileMode_Decal$descriptor() {
        return SkTileMode_Decal.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkTileMode_Decal()
     * }
     */
    public static MethodHandle SkTileMode_Decal$handle() {
        return SkTileMode_Decal.HANDLE;
    }
